src/y.output
Terminals unused in grammar

   CLASSTOKEN
   ERRORTOKEN
   FLAGSTOKEN
   HELPTOKEN
   HIGHLIGHTTOKEN
   OPTIONSTOKEN
   PARASTOKEN
   PARATOKEN
   QETOKEN
   REAL
   TRECTOKEN


Grammar

    0 $accept: request $end

    1 request: command ENDOFQUERY
    2        | ENDOFQUERY
    3        | %empty
    4        | error ENDOFQUERY

    5 command: choose
    6        | find
    7        | combine
    8        | stem
    9        | delete
   10        | info
   11        | show
   12        | weight
   13        | rscore
   14        | parse
   15        | superparse
   16        | extract
   17        | limit
   18        | gsl
   19        | findlimit
   20        | settoken
   21        | debug
   22        | tf
   23        | doclength
   24        | perror
   25        | dump
   26        | report
   27        | display
   28        | displaytrecstats
   29        | unknowncommand

   30 unknowncommand: UNKNOWNCOMMAND

   31 word: AWORD

   32 inumber: NUMBER

   33 dnumber: NUMBER

   34 setnum: STOKEN EQUALS NUMBER

   35 rnum: RTOKEN EQUALS inumber

   36 irn: IRNTOKEN EQUALS inumber

   37 frignum: FRIGTOKEN EQUALS dnumber

   38 attr: ATOKEN EQUALS AWORD

   39 lmask: LIMITTOKEN EQUALS inumber

   40 $@1: %empty

   41 $@2: %empty

   42 choose: CHOOSETOKEN $@1 chooseargs dbname $@2 ENDOFQUERY

   43 chooseargs: %empty
   44           | DBFLAGSTOKEN EQUALS inumber

   45 dbname: word
   46       | DBTOKEN EQUALS word

   47 find: lkupcmd ENDOFQUERY
   48     | combcmd ENDOFQUERY
   49     | ftoken irn ENDOFQUERY
   50     | ftoken setnum rnum ENDOFQUERY
   51     | ftoken rnum setnum ENDOFQUERY

   52 $@3: %empty

   53 combine: COMBTOKEN $@3 sets options ENDOFQUERY

   54 lkupcmd: ftoken qualifiers TERM
   55        | ftoken qualifiers

   56 combcmd: ftoken sets options
   57        | ftoken set TOPTOKEN EQUALS inumber

   58 ftoken: FINDTOKEN

   59 sets: set
   60     | sets set

   61 set: setnum WTOKEN EQUALS dnumber
   62    | setnum WTOKEN EQUALS DOLLAR
   63    | setnum
   64    | setnum frignum
   65    | set QTFTOKEN EQUALS inumber

   66 options: %empty
   67        | options option

   68 option: OPTOKEN EQUALS word
   69       | SCOREFUNCTOKEN EQUALS inumber
   70       | GAPTOKEN EQUALS inumber
   71       | AWTOKEN EQUALS dnumber
   72       | GWTOKEN EQUALS dnumber
   73       | TARGETTOKEN EQUALS inumber
   74       | SAVETOKEN EQUALS tnumber
   75       | MEMTOKEN EQUALS tnumber
   76       | HOLDTOKEN EQUALS tnumber
   77       | FILETOKEN EQUALS tnumber
   78       | NOPOSTOKEN EQUALS tnumber
   79       | NOTFTOKEN EQUALS tnumber
   80       | OPENTOKEN EQUALS tnumber
   81       | KEEPTOKEN EQUALS tnumber
   82       | DELTOKEN EQUALS tnumber
   83       | NO_ST_TOKEN EQUALS tnumber
   84       | ST_TOKEN EQUALS tnumber
   85       | STATS_TOKEN EQUALS tnumber
   86       | NOSHOW_TOKEN EQUALS tnumber
   87       | MODETOKEN EQUALS word
   88       | lmask
   89       | K1TOKEN EQUALS dnumber
   90       | K2TOKEN EQUALS dnumber
   91       | K3TOKEN EQUALS dnumber
   92       | K7TOKEN EQUALS dnumber
   93       | K8TOKEN EQUALS dnumber
   94       | BM25_B_TOKEN EQUALS dnumber
   95       | B3_TOKEN EQUALS dnumber
   96       | AVEDOCLEN_TOKEN EQUALS inumber
   97       | QUERYLEN_TOKEN EQUALS inumber
   98       | AVEQUERYLEN_TOKEN EQUALS inumber
   99       | P_UNIT_TOKEN EQUALS inumber
  100       | P_STEP_TOKEN EQUALS inumber
  101       | P_MAXLEN_TOKEN EQUALS inumber
  102       | MARKTOKEN EQUALS inumber

  103 qualifiers: %empty
  104           | qualifiers qualifier

  105 qualifier: SAVETOKEN EQUALS tnumber
  106          | MEMTOKEN EQUALS tnumber
  107          | HOLDTOKEN EQUALS tnumber
  108          | FILETOKEN EQUALS tnumber
  109          | NOPOSTOKEN EQUALS tnumber
  110          | NOTFTOKEN EQUALS tnumber
  111          | OPENTOKEN EQUALS tnumber
  112          | KEEPTOKEN EQUALS tnumber
  113          | TYPETOKEN EQUALS inumber
  114          | lmask
  115          | attr

  116 stem: STEMTOKEN stemfunc EQUALS word TERM

  117 stemfunc: STEMFUNCTIONTOKEN
  118         | FUNCTOKEN

  119 delete: deltoken numbers ENDOFQUERY
  120       | deltoken STOKEN EQUALS word ENDOFQUERY
  121       | deltoken word ENDOFQUERY
  122       | deltoken ENDOFQUERY

  123 deltoken: DELETETOKEN

  124 numbers: number
  125        | numbers number

  126 number: inumber
  127       | setnum

  128 info: INFOTOKEN irn ENDOFQUERY
  129     | INFOTOKEN DBTOKEN ENDOFQUERY
  130     | INFOTOKEN DBTOKEN EQUALS word ENDOFQUERY
  131     | INFOTOKEN DBSTOKEN ENDOFQUERY
  132     | INFOTOKEN attr ENDOFQUERY
  133     | INFOTOKEN ATOKEN ENDOFQUERY
  134     | INFOTOKEN ATTSTOKEN ENDOFQUERY
  135     | INFOTOKEN STEMFUNCTIONSTOKEN
  136     | INFOTOKEN REGIMESTOKEN
  137     | INFOTOKEN GSLSTOKEN
  138     | INFOTOKEN VERSIONTOKEN
  139     | INFOTOKEN LIMITSTOKEN
  140     | INFOTOKEN word ENDOFQUERY
  141     | INFOTOKEN ENDOFQUERY

  142 $@4: %empty

  143 show: SHOWTOKEN $@4 show_args ENDOFQUERY

  144 show_args: %empty
  145          | show_args show_arg

  146 show_arg: setnum
  147         | rnum
  148         | FTOKEN EQUALS inumber
  149         | NTOKEN EQUALS inumber
  150         | irn
  151         | NOERRORTOKEN EQUALS tnumber
  152         | STARTSTRTOKEN EQUALS word
  153         | FINSTRTOKEN EQUALS word

  154 parse: ptoken p1qualifiers pterm
  155      | ptoken p2qualifiers pterm

  156 ptoken: PARSETOKEN

  157 superparse: sptoken p1qualifiers pterm
  158           | sptoken p2qualifiers pterm

  159 sptoken: SUPERPARSETOKEN

  160 pterm: %empty
  161      | TERM

  162 p1qualifiers: %empty
  163             | p1qualifiers p1qualifier

  164 p2qualifiers: p2qualifier
  165             | p2qualifiers p2qualifier

  166 p1qualifier: attr

  167 p2qualifier: REGTOKEN EQUALS word
  168            | STEMFUNCTIONTOKEN EQUALS word
  169            | GSLTOKEN EQUALS word

  170 $@5: %empty

  171 extract: EXTRACTTOKEN $@5 extractargs ENDOFQUERY

  172 extractargs: %empty
  173            | extractargs extractarg

  174 extractarg: setnum
  175           | irn
  176           | rnum
  177           | OFFSETTOKEN EQUALS inumber
  178           | LENGTHTOKEN EQUALS inumber
  179           | FIELDTOKEN EQUALS inumber
  180           | FIELDTOKEN EQUALS word
  181           | SRCTOKEN EQUALS tnumber
  182           | attr

  183 $@6: %empty

  184 weight: WEIGHTTOKEN $@6 weightqualifiers ENDOFQUERY

  185 weightqualifiers: %empty
  186                 | weightqualifiers weightqualifier

  187 weightqualifier: lmask
  188                | wfunc EQUALS inumber
  189                | NTOKEN EQUALS inumber
  190                | TTF_TOKEN EQUALS inumber
  191                | QTFTOKEN EQUALS inumber
  192                | K3TOKEN EQUALS NUMBER
  193                | K4TOKEN EQUALS NUMBER
  194                | K5TOKEN EQUALS NUMBER
  195                | K6TOKEN EQUALS NUMBER
  196                | rnum
  197                | STOKEN EQUALS inumber
  198                | BIGRTOKEN EQUALS inumber
  199                | BIGSTOKEN EQUALS inumber
  200                | RLOADTOKEN EQUALS inumber
  201                | BIGRLOADTOKEN EQUALS inumber
  202                | BIGNTOKEN EQUALS inumber
  203                | THETATOKEN EQUALS inumber
  204                | LAMDATOKEN EQUALS NUMBER
  205                | TNPTOKEN EQUALS NUMBER
  206                | CTTF_TOKEN EQUALS NUMBER
  207                | WTFACTORTOKEN EQUALS NUMBER

  208 wfunc: WTFUNCTOKEN
  209      | FUNCTOKEN

  210 $@7: %empty

  211 rscore: RSCORETOKEN $@7 rscorequalifiers ENDOFQUERY

  212 rscorequalifiers: %empty
  213                 | rscorequalifiers rscorequalifier

  214 rscorequalifier: lmask
  215                | attr
  216                | NTOKEN EQUALS inumber
  217                | rnum
  218                | BIGRTOKEN EQUALS inumber

  219 $@8: %empty

  220 gsl: GSLTOKEN $@8 p1qualifiers TERM

  221 debug: DEBUGTOKEN TERM
  222      | DEBUGTOKEN inumber

  223 findlimit: FINDLIMITTOKEN TERM
  224          | FINDLIMITTOKEN ENDOFQUERY

  225 $@9: %empty

  226 settoken: SETTOKEN $@9 setargs
  227         | SETTOKEN word ENDOFQUERY
  228         | SETTOKEN

  229 setargs: setarg
  230        | setargs setarg

  231 setarg: lmask
  232       | VERBOSETOKEN EQUALS NUMBER
  233       | THETATOKEN EQUALS inumber
  234       | LAMDATOKEN EQUALS NUMBER
  235       | TNT_TOKEN EQUALS inumber
  236       | TNPTOKEN EQUALS NUMBER
  237       | CTTF_TOKEN EQUALS NUMBER
  238       | wfunc EQUALS inumber
  239       | SCOREFUNCTOKEN EQUALS inumber
  240       | FTOKEN EQUALS NUMBER
  241       | ATOKEN EQUALS AWORD
  242       | SAVETOKEN EQUALS tnumber
  243       | TYPETOKEN EQUALS wnumber
  244       | NOPOSTOKEN EQUALS tnumber
  245       | NOTFTOKEN EQUALS tnumber
  246       | MEMTOKEN EQUALS tnumber
  247       | NO_ST_TOKEN EQUALS tnumber
  248       | ST_TOKEN EQUALS tnumber
  249       | K1TOKEN EQUALS NUMBER
  250       | K2TOKEN EQUALS NUMBER
  251       | K3TOKEN EQUALS NUMBER
  252       | K4TOKEN EQUALS NUMBER
  253       | K5TOKEN EQUALS NUMBER
  254       | K6TOKEN EQUALS NUMBER
  255       | K7TOKEN EQUALS NUMBER
  256       | K8TOKEN EQUALS NUMBER
  257       | BM25_B_TOKEN EQUALS NUMBER
  258       | B3_TOKEN EQUALS NUMBER
  259       | AVEDOCLEN_TOKEN EQUALS NUMBER
  260       | AVEQUERYLEN_TOKEN EQUALS NUMBER
  261       | P_UNIT_TOKEN EQUALS NUMBER
  262       | P_STEP_TOKEN EQUALS NUMBER
  263       | P_MAXLEN_TOKEN EQUALS NUMBER
  264       | BIGRTOKEN EQUALS NUMBER
  265       | BIGSTOKEN EQUALS NUMBER
  266       | BIGRLOADTOKEN EQUALS NUMBER
  267       | RLOADTOKEN EQUALS NUMBER
  268       | BIGNTOKEN EQUALS NUMBER
  269       | DEBUGTOKEN EQUALS inumber
  270       | PREFERTOKEN EQUALS NUMBER
  271       | ACCEPTTOKEN EQUALS NUMBER
  272       | OPTOKEN EQUALS AWORD

  273 tnumber: AWORD
  274        | NUMBER

  275 wnumber: AWORD
  276        | NUMBER

  277 $@10: %empty

  278 limit: LIMITTOKEN $@10 limitargs

  279 limitargs: %empty
  280          | limitargs limitarg

  281 limitarg: setnum
  282         | lmask
  283         | SAVETOKEN EQUALS tnumber

  284 display: DISPLAYTOKEN ENDOFQUERY

  285 $@11: %empty

  286 display: DISPLAYTOKEN $@11 dispqualifiers disparg
  287        | DISPLAYTOKEN STATS_TOKEN
  288        | DISPLAYTOKEN setnum STATS_TOKEN
  289        | DISPLAYTOKEN STATS_TOKEN setnum

  290 disparg: BIGNTOKEN
  291        | AVEDOCLEN_TOKEN
  292        | TNT_TOKEN
  293        | CTTF_TOKEN
  294        | DBTOKEN
  295        | WTOKEN
  296        | NTOKEN
  297        | TTF_TOKEN

  298 dispqualifiers: %empty
  299               | dispqualifiers dispqualifier

  300 dispqualifier: lmask
  301              | attr

  302 $@12: %empty

  303 displaytrecstats: DISPLAYTRECSTATSTOKEN $@12 stat_args ENDOFQUERY

  304 stat_args: %empty
  305          | stat_args stat_arg

  306 stat_arg: setnum
  307         | MARKTOKEN EQUALS inumber
  308         | BIGRTOKEN EQUALS inumber
  309         | NTOKEN EQUALS inumber
  310         | MEMTOKEN EQUALS tnumber
  311         | CODETOKEN EQUALS inumber
  312         | AWORD

  313 perror: PERRORTOKEN ENDOFQUERY

  314 tf: TFTOKEN ENDOFQUERY

  315 $@13: %empty

  316 doclength: DOCLENGTHTOKEN $@13 doclengthargs ENDOFQUERY

  317 doclengthargs: %empty
  318              | doclengthargs doclengtharg

  319 doclengtharg: setnum
  320             | irn
  321             | rnum
  322             | attr

  323 $@14: %empty

  324 dump: DUMPTOKEN $@14 dumpargs ENDOFQUERY

  325 dumpargs: %empty
  326         | dumpargs dumparg

  327 dumparg: word
  328        | setnum
  329        | TTF_TOKEN
  330        | NTOKEN
  331        | ATOKEN

  332 report: REPORTTOKEN word ENDOFQUERY


Terminals, with rules where they appear

$end (0) 0
error (256) 4
ACCEPTTOKEN (258) 271
ATOKEN (259) 38 133 241 331
ATTSTOKEN (260) 134
AVEDOCLEN_TOKEN (261) 96 259 291
AVEQUERYLEN_TOKEN (262) 98 260
AWTOKEN (263) 71
BIGNTOKEN (264) 202 268 290
BIGRLOADTOKEN (265) 201 266
BIGRTOKEN (266) 198 218 264 308
BIGSTOKEN (267) 199 265
BM25_B_TOKEN (268) 94 257
B3_TOKEN (269) 95 258
CHOOSETOKEN (270) 42
CLASSTOKEN (271)
CODETOKEN (272) 311
COMBTOKEN (273) 53
TNT_TOKEN (274) 235 292
CTTF_TOKEN (275) 206 237 293
DBFLAGSTOKEN (276) 44
DBSTOKEN (277) 131
DBTOKEN (278) 46 129 130 294
DEBUGTOKEN (279) 221 222 269
DELETETOKEN (280) 123
DELTOKEN (281) 82
DISPLAYTOKEN (282) 284 286 287 288 289
DISPLAYTRECSTATSTOKEN (283) 303
DOCLENGTHTOKEN (284) 316
DOLLAR (285) 62
DUMPTOKEN (286) 324
EQUALS (287) 34 35 36 37 38 39 44 46 57 61 62 65 68 69 70 71 72 73
    74 75 76 77 78 79 80 81 82 83 84 85 86 87 89 90 91 92 93 94 95
    96 97 98 99 100 101 102 105 106 107 108 109 110 111 112 113 116
    120 130 148 149 151 152 153 167 168 169 177 178 179 180 181 188
    189 190 191 192 193 194 195 197 198 199 200 201 202 203 204 205
    206 207 216 218 232 233 234 235 236 237 238 239 240 241 242 243
    244 245 246 247 248 249 250 251 252 253 254 255 256 257 258 259
    260 261 262 263 264 265 266 267 268 269 270 271 272 283 307 308
    309 310 311
ERRORTOKEN (288)
NOERRORTOKEN (289) 151
EXTRACTTOKEN (290) 171
FIELDTOKEN (291) 179 180
FILETOKEN (292) 77 108
FINDLIMITTOKEN (293) 223 224
FINDTOKEN (294) 58
FINSTRTOKEN (295) 153
FLAGSTOKEN (296)
FRIGTOKEN (297) 37
FTOKEN (298) 148 240
FUNCTOKEN (299) 118 209
GAPTOKEN (300) 70
GSLSTOKEN (301) 137
GSLTOKEN (302) 169 220
GWTOKEN (303) 72
HELPTOKEN (304)
HIGHLIGHTTOKEN (305)
HOLDTOKEN (306) 76 107
INFOTOKEN (307) 128 129 130 131 132 133 134 135 136 137 138 139 140
    141
IRNTOKEN (308) 36
K1TOKEN (309) 89 249
K2TOKEN (310) 90 250
K3TOKEN (311) 91 192 251
K4TOKEN (312) 193 252
K5TOKEN (313) 194 253
K6TOKEN (314) 195 254
K7TOKEN (315) 92 255
K8TOKEN (316) 93 256
KEEPTOKEN (317) 81 112
LAMDATOKEN (318) 204 234
LENGTHTOKEN (319) 178
LIMITTOKEN (320) 39 278
LIMITSTOKEN (321) 139
MARKTOKEN (322) 102 307
MEMTOKEN (323) 75 106 246 310
MODETOKEN (324) 87
NOPOSTOKEN (325) 78 109 244
NOSHOW_TOKEN (326) 86
NOTFTOKEN (327) 79 110 245
NO_ST_TOKEN (328) 83 247
NTOKEN (329) 149 189 216 296 309 330
NUMBER (330) 32 33 34 192 193 194 195 204 205 206 207 232 234 236 237
    240 249 250 251 252 253 254 255 256 257 258 259 260 261 262 263
    264 265 266 267 268 270 271 274 276
OFFSETTOKEN (331) 177
OPENTOKEN (332) 80 111
OPTIONSTOKEN (333)
OPTOKEN (334) 68 272
PARASTOKEN (335)
PARATOKEN (336)
PARSETOKEN (337) 156
PERRORTOKEN (338) 313
PREFERTOKEN (339) 270
P_MAXLEN_TOKEN (340) 101 263
P_STEP_TOKEN (341) 100 262
P_UNIT_TOKEN (342) 99 261
QETOKEN (343)
QTFTOKEN (344) 65 191
QUERYLEN_TOKEN (345) 97
REAL (346)
REGIMESTOKEN (347) 136
REGTOKEN (348) 167
REPORTTOKEN (349) 332
RLOADTOKEN (350) 200 267
RSCORETOKEN (351) 211
RTOKEN (352) 35
SAVETOKEN (353) 74 105 242 283
SETTOKEN (354) 226 227 228
SCOREFUNCTOKEN (355) 69 239
SHOWTOKEN (356) 143
SRCTOKEN (357) 181
STARTSTRTOKEN (358) 152
STATS_TOKEN (359) 85 287 288 289
STEMFUNCTIONSTOKEN (360) 135
STEMFUNCTIONTOKEN (361) 117 168
STEMTOKEN (362) 116
STOKEN (363) 34 120 197
ST_TOKEN (364) 84 248
SUPERPARSETOKEN (365) 159
TARGETTOKEN (366) 73
TERM (367) 54 116 161 220 221 223
TFTOKEN (368) 314
THETATOKEN (369) 203 233
TNPTOKEN (370) 205 236
TOPTOKEN (371) 57
TRECTOKEN (372)
TTF_TOKEN (373) 190 297 329
TYPETOKEN (374) 113 243
VERBOSETOKEN (375) 232
VERSIONTOKEN (376) 138
WEIGHTTOKEN (377) 184
AWORD (378) 31 38 241 272 273 275 312
WTFUNCTOKEN (379) 208
WTOKEN (380) 61 62 295
WTFACTORTOKEN (381) 207
UNKNOWNCOMMAND (382) 30
ENDOFQUERY (383) 1 2 4 42 47 48 49 50 51 53 119 120 121 122 128 129
    130 131 132 133 134 140 141 143 171 184 211 224 227 284 303 313
    314 316 324 332


Nonterminals, with rules where they appear

$accept (129)
    on left: 0
request (130)
    on left: 1 2 3 4, on right: 0
command (131)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
    25 26 27 28 29, on right: 1
unknowncommand (132)
    on left: 30, on right: 29
word (133)
    on left: 31, on right: 45 46 68 87 116 120 121 130 140 152 153
    167 168 169 180 227 327 332
inumber (134)
    on left: 32, on right: 35 36 39 44 57 65 69 70 73 96 97 98 99 100
    101 102 113 126 148 149 177 178 179 188 189 190 191 197 198 199
    200 201 202 203 216 218 222 233 235 238 239 269 307 308 309 311
dnumber (135)
    on left: 33, on right: 37 61 71 72 89 90 91 92 93 94 95
setnum (136)
    on left: 34, on right: 50 51 61 62 63 64 127 146 174 281 288 289
    306 319 328
rnum (137)
    on left: 35, on right: 50 51 147 176 196 217 321
irn (138)
    on left: 36, on right: 49 128 150 175 320
frignum (139)
    on left: 37, on right: 64
attr (140)
    on left: 38, on right: 115 132 166 182 215 301 322
lmask (141)
    on left: 39, on right: 88 114 187 214 231 282 300
choose (142)
    on left: 42, on right: 5
$@1 (143)
    on left: 40, on right: 42
$@2 (144)
    on left: 41, on right: 42
chooseargs (145)
    on left: 43 44, on right: 42
dbname (146)
    on left: 45 46, on right: 42
find (147)
    on left: 47 48 49 50 51, on right: 6
combine (148)
    on left: 53, on right: 7
$@3 (149)
    on left: 52, on right: 53
lkupcmd (150)
    on left: 54 55, on right: 47
combcmd (151)
    on left: 56 57, on right: 48
ftoken (152)
    on left: 58, on right: 49 50 51 54 55 56 57
sets (153)
    on left: 59 60, on right: 53 56 60
set (154)
    on left: 61 62 63 64 65, on right: 57 59 60 65
options (155)
    on left: 66 67, on right: 53 56 67
option (156)
    on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
    86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102, on right:
    67
qualifiers (157)
    on left: 103 104, on right: 54 55 104
qualifier (158)
    on left: 105 106 107 108 109 110 111 112 113 114 115, on right:
    104
stem (159)
    on left: 116, on right: 8
stemfunc (160)
    on left: 117 118, on right: 116
delete (161)
    on left: 119 120 121 122, on right: 9
deltoken (162)
    on left: 123, on right: 119 120 121 122
numbers (163)
    on left: 124 125, on right: 119 125
number (164)
    on left: 126 127, on right: 124 125
info (165)
    on left: 128 129 130 131 132 133 134 135 136 137 138 139 140 141,
    on right: 10
show (166)
    on left: 143, on right: 11
$@4 (167)
    on left: 142, on right: 143
show_args (168)
    on left: 144 145, on right: 143 145
show_arg (169)
    on left: 146 147 148 149 150 151 152 153, on right: 145
parse (170)
    on left: 154 155, on right: 14
ptoken (171)
    on left: 156, on right: 154 155
superparse (172)
    on left: 157 158, on right: 15
sptoken (173)
    on left: 159, on right: 157 158
pterm (174)
    on left: 160 161, on right: 154 155 157 158
p1qualifiers (175)
    on left: 162 163, on right: 154 157 163 220
p2qualifiers (176)
    on left: 164 165, on right: 155 158 165
p1qualifier (177)
    on left: 166, on right: 163
p2qualifier (178)
    on left: 167 168 169, on right: 164 165
extract (179)
    on left: 171, on right: 16
$@5 (180)
    on left: 170, on right: 171
extractargs (181)
    on left: 172 173, on right: 171 173
extractarg (182)
    on left: 174 175 176 177 178 179 180 181 182, on right: 173
weight (183)
    on left: 184, on right: 12
$@6 (184)
    on left: 183, on right: 184
weightqualifiers (185)
    on left: 185 186, on right: 184 186
weightqualifier (186)
    on left: 187 188 189 190 191 192 193 194 195 196 197 198 199 200
    201 202 203 204 205 206 207, on right: 186
wfunc (187)
    on left: 208 209, on right: 188 238
rscore (188)
    on left: 211, on right: 13
$@7 (189)
    on left: 210, on right: 211
rscorequalifiers (190)
    on left: 212 213, on right: 211 213
rscorequalifier (191)
    on left: 214 215 216 217 218, on right: 213
gsl (192)
    on left: 220, on right: 18
$@8 (193)
    on left: 219, on right: 220
debug (194)
    on left: 221 222, on right: 21
findlimit (195)
    on left: 223 224, on right: 19
settoken (196)
    on left: 226 227 228, on right: 20
$@9 (197)
    on left: 225, on right: 226
setargs (198)
    on left: 229 230, on right: 226 230
setarg (199)
    on left: 231 232 233 234 235 236 237 238 239 240 241 242 243 244
    245 246 247 248 249 250 251 252 253 254 255 256 257 258 259 260
    261 262 263 264 265 266 267 268 269 270 271 272, on right: 229
    230
tnumber (200)
    on left: 273 274, on right: 74 75 76 77 78 79 80 81 82 83 84 85
    86 105 106 107 108 109 110 111 112 151 181 242 244 245 246 247
    248 283 310
wnumber (201)
    on left: 275 276, on right: 243
limit (202)
    on left: 278, on right: 17
$@10 (203)
    on left: 277, on right: 278
limitargs (204)
    on left: 279 280, on right: 278 280
limitarg (205)
    on left: 281 282 283, on right: 280
display (206)
    on left: 284 286 287 288 289, on right: 27
$@11 (207)
    on left: 285, on right: 286
disparg (208)
    on left: 290 291 292 293 294 295 296 297, on right: 286
dispqualifiers (209)
    on left: 298 299, on right: 286 299
dispqualifier (210)
    on left: 300 301, on right: 299
displaytrecstats (211)
    on left: 303, on right: 28
$@12 (212)
    on left: 302, on right: 303
stat_args (213)
    on left: 304 305, on right: 303 305
stat_arg (214)
    on left: 306 307 308 309 310 311 312, on right: 305
perror (215)
    on left: 313, on right: 24
tf (216)
    on left: 314, on right: 22
doclength (217)
    on left: 316, on right: 23
$@13 (218)
    on left: 315, on right: 316
doclengthargs (219)
    on left: 317 318, on right: 316 318
doclengtharg (220)
    on left: 319 320 321 322, on right: 318
dump (221)
    on left: 324, on right: 25
$@14 (222)
    on left: 323, on right: 324
dumpargs (223)
    on left: 325 326, on right: 324 326
dumparg (224)
    on left: 327 328 329 330 331, on right: 326
report (225)
    on left: 332, on right: 26


State 0

    0 $accept: . request $end

    error                  shift, and go to state 1
    CHOOSETOKEN            shift, and go to state 2
    COMBTOKEN              shift, and go to state 3
    DEBUGTOKEN             shift, and go to state 4
    DELETETOKEN            shift, and go to state 5
    DISPLAYTOKEN           shift, and go to state 6
    DISPLAYTRECSTATSTOKEN  shift, and go to state 7
    DOCLENGTHTOKEN         shift, and go to state 8
    DUMPTOKEN              shift, and go to state 9
    EXTRACTTOKEN           shift, and go to state 10
    FINDLIMITTOKEN         shift, and go to state 11
    FINDTOKEN              shift, and go to state 12
    GSLTOKEN               shift, and go to state 13
    INFOTOKEN              shift, and go to state 14
    LIMITTOKEN             shift, and go to state 15
    PARSETOKEN             shift, and go to state 16
    PERRORTOKEN            shift, and go to state 17
    REPORTTOKEN            shift, and go to state 18
    RSCORETOKEN            shift, and go to state 19
    SETTOKEN               shift, and go to state 20
    SHOWTOKEN              shift, and go to state 21
    STEMTOKEN              shift, and go to state 22
    SUPERPARSETOKEN        shift, and go to state 23
    TFTOKEN                shift, and go to state 24
    WEIGHTTOKEN            shift, and go to state 25
    UNKNOWNCOMMAND         shift, and go to state 26
    ENDOFQUERY             shift, and go to state 27

    $end  reduce using rule 3 (request)

    request           go to state 28
    command           go to state 29
    unknowncommand    go to state 30
    choose            go to state 31
    find              go to state 32
    combine           go to state 33
    lkupcmd           go to state 34
    combcmd           go to state 35
    ftoken            go to state 36
    stem              go to state 37
    delete            go to state 38
    deltoken          go to state 39
    info              go to state 40
    show              go to state 41
    parse             go to state 42
    ptoken            go to state 43
    superparse        go to state 44
    sptoken           go to state 45
    extract           go to state 46
    weight            go to state 47
    rscore            go to state 48
    gsl               go to state 49
    debug             go to state 50
    findlimit         go to state 51
    settoken          go to state 52
    limit             go to state 53
    display           go to state 54
    displaytrecstats  go to state 55
    perror            go to state 56
    tf                go to state 57
    doclength         go to state 58
    dump              go to state 59
    report            go to state 60


State 1

    4 request: error . ENDOFQUERY

    ENDOFQUERY  shift, and go to state 61


State 2

   42 choose: CHOOSETOKEN . $@1 chooseargs dbname $@2 ENDOFQUERY

    $default  reduce using rule 40 ($@1)

    $@1  go to state 62


State 3

   53 combine: COMBTOKEN . $@3 sets options ENDOFQUERY

    $default  reduce using rule 52 ($@3)

    $@3  go to state 63


State 4

  221 debug: DEBUGTOKEN . TERM
  222      | DEBUGTOKEN . inumber

    NUMBER  shift, and go to state 64
    TERM    shift, and go to state 65

    inumber  go to state 66


State 5

  123 deltoken: DELETETOKEN .

    $default  reduce using rule 123 (deltoken)


State 6

  284 display: DISPLAYTOKEN . ENDOFQUERY
  286        | DISPLAYTOKEN . $@11 dispqualifiers disparg
  287        | DISPLAYTOKEN . STATS_TOKEN
  288        | DISPLAYTOKEN . setnum STATS_TOKEN
  289        | DISPLAYTOKEN . STATS_TOKEN setnum

    STATS_TOKEN  shift, and go to state 67
    STOKEN       shift, and go to state 68
    ENDOFQUERY   shift, and go to state 69

    $default  reduce using rule 285 ($@11)

    setnum  go to state 70
    $@11    go to state 71


State 7

  303 displaytrecstats: DISPLAYTRECSTATSTOKEN . $@12 stat_args ENDOFQUERY

    $default  reduce using rule 302 ($@12)

    $@12  go to state 72


State 8

  316 doclength: DOCLENGTHTOKEN . $@13 doclengthargs ENDOFQUERY

    $default  reduce using rule 315 ($@13)

    $@13  go to state 73


State 9

  324 dump: DUMPTOKEN . $@14 dumpargs ENDOFQUERY

    $default  reduce using rule 323 ($@14)

    $@14  go to state 74


State 10

  171 extract: EXTRACTTOKEN . $@5 extractargs ENDOFQUERY

    $default  reduce using rule 170 ($@5)

    $@5  go to state 75


State 11

  223 findlimit: FINDLIMITTOKEN . TERM
  224          | FINDLIMITTOKEN . ENDOFQUERY

    TERM        shift, and go to state 76
    ENDOFQUERY  shift, and go to state 77


State 12

   58 ftoken: FINDTOKEN .

    $default  reduce using rule 58 (ftoken)


State 13

  220 gsl: GSLTOKEN . $@8 p1qualifiers TERM

    $default  reduce using rule 219 ($@8)

    $@8  go to state 78


State 14

  128 info: INFOTOKEN . irn ENDOFQUERY
  129     | INFOTOKEN . DBTOKEN ENDOFQUERY
  130     | INFOTOKEN . DBTOKEN EQUALS word ENDOFQUERY
  131     | INFOTOKEN . DBSTOKEN ENDOFQUERY
  132     | INFOTOKEN . attr ENDOFQUERY
  133     | INFOTOKEN . ATOKEN ENDOFQUERY
  134     | INFOTOKEN . ATTSTOKEN ENDOFQUERY
  135     | INFOTOKEN . STEMFUNCTIONSTOKEN
  136     | INFOTOKEN . REGIMESTOKEN
  137     | INFOTOKEN . GSLSTOKEN
  138     | INFOTOKEN . VERSIONTOKEN
  139     | INFOTOKEN . LIMITSTOKEN
  140     | INFOTOKEN . word ENDOFQUERY
  141     | INFOTOKEN . ENDOFQUERY

    ATOKEN              shift, and go to state 79
    ATTSTOKEN           shift, and go to state 80
    DBSTOKEN            shift, and go to state 81
    DBTOKEN             shift, and go to state 82
    GSLSTOKEN           shift, and go to state 83
    IRNTOKEN            shift, and go to state 84
    LIMITSTOKEN         shift, and go to state 85
    REGIMESTOKEN        shift, and go to state 86
    STEMFUNCTIONSTOKEN  shift, and go to state 87
    VERSIONTOKEN        shift, and go to state 88
    AWORD               shift, and go to state 89
    ENDOFQUERY          shift, and go to state 90

    word  go to state 91
    irn   go to state 92
    attr  go to state 93


State 15

  278 limit: LIMITTOKEN . $@10 limitargs

    $default  reduce using rule 277 ($@10)

    $@10  go to state 94


State 16

  156 ptoken: PARSETOKEN .

    $default  reduce using rule 156 (ptoken)


State 17

  313 perror: PERRORTOKEN . ENDOFQUERY

    ENDOFQUERY  shift, and go to state 95


State 18

  332 report: REPORTTOKEN . word ENDOFQUERY

    AWORD  shift, and go to state 89

    word  go to state 96


State 19

  211 rscore: RSCORETOKEN . $@7 rscorequalifiers ENDOFQUERY

    $default  reduce using rule 210 ($@7)

    $@7  go to state 97


State 20

  226 settoken: SETTOKEN . $@9 setargs
  227         | SETTOKEN . word ENDOFQUERY
  228         | SETTOKEN .

    AWORD  shift, and go to state 89
